[tool.poetry]
name = "rag-llama"
version = "0.1.0"
description = "local rag experimentation with llama"
authors = ["ras <rahul.a.sharma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ollama = "^0.4.1"
chromadb = "^0.5.20"
streamlit = "^1.40.1"
pymupdf = "^1.24.14"
langchain-community = "^0.3.8"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
